[gd_scene load_steps=13 format=2]

[ext_resource path="res://light.png" type="Texture" id=1]
[ext_resource path="res://props/props_assets/crazy_eyes.png" type="Texture" id=2]
[ext_resource path="res://props/crazy_eyes.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 128, 64 )

[node name="crazy_eyes" type="AnimatedSprite"]
frames = SubResource( 8 )
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 4.80351, 5.16356 )
scale = Vector2( 0.00882547, 0.00899769 )
enabled = false
texture = ExtResource( 1 )
color = Color( 0.352941, 0.352941, 0.639216, 1 )
energy = 1.56
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 6.1889, -2.55503 )
scale = Vector2( 0.00882547, 0.00899769 )
enabled = false
texture = ExtResource( 1 )
color = Color( 0.352941, 0.352941, 0.639216, 1 )
energy = 1.56
shadow_enabled = true

[node name="Light2D3" type="Light2D" parent="."]
position = Vector2( -6.34557, -1.99734 )
scale = Vector2( 0.00521769, 0.0053195 )
enabled = false
texture = ExtResource( 1 )
color = Color( 0.352941, 0.352941, 0.639216, 1 )
energy = 1.56
shadow_enabled = true

[node name="Light2D4" type="Light2D" parent="."]
position = Vector2( -4.66331, 3.75516 )
scale = Vector2( 0.00322052, 0.00328336 )
enabled = false
texture = ExtResource( 1 )
color = Color( 0.352941, 0.352941, 0.639216, 1 )
energy = 1.56
shadow_enabled = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
